[tool.poetry]
name = "crypto-tele-bot"
version = "0.1.0"
description = ""
authors = ["opti213 <opti213@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pyTelegramBotAPI = "^3.6"
requests = "^2.22"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
